<resources>
    <string name="app_name">DailyQuiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Добро пожаловать \nв Daily Quiz!</string>
    <string name="question_title">Как переводится слово \"apple\"?</string>
    <string name="start_quiz_btn">Начать викторину</string>
    <string name="restart_quiz_btn">Начать заново</string>
    <string name="further">Далее</string>
    <string name="results">Результаты</string>
    <string name="question_count">Вопрос 1 из 5</string>
    <string name="not_back">Вернуться к предыдущим вопросам нельзя</string>
    <string name="history_text">История</string>
    <string name="delete_text">Удалить</string>
    <string name="blank_history">Вы еще не проходили ни одной викторины</string>
    <string name="almost_ready">Почти готовы!</string>
    <string name="choose_filter">Осталось выбрать категорию\n и сложность викторины.</string>

    <string name="perfect">Идеально!</string>
    <string name="almost_perfect">Почти идеально!</string>
    <string name="good">Хороший результат!</string>
    <string name="almost_good">Есть над чем поработать</string>
    <string name="bad">Сложный вопрос?</string>
    <string name="worse">Бывает и так!</string>

    <string name="zero_star">0/5 — не отчаивайтесь. Начните заново и удивите себя!</string>
    <string name="one_star">1/5 — иногда просто не ваш день. Следующая попытка будет лучше!</string>
    <string name="two_star">2/5 — не расстраивайтесь, попробуйте ещё раз!</string>
    <string name="three_star">3/5 — вы на верном пути. Продолжайте тренироваться!</string>
    <string name="four_star">4/5 — очень близко к совершенству. Ещё один шаг!</string>
    <string name="five_star">5/5 — вы ответили на всё правильно. Это блестящий результат!</string>

    <string-array name="difficulty">
        <item>easy</item>
        <item>medium</item>
        <item>hard</item>
    </string-array>

    <string name="category">Категория</string>
    <string name="difficulty">Сложность</string>
</resources>